updated icoca card section

--- a/how_to.html
+++ b/how_to.html
@@ -62,7 +62,7 @@
                 </a>
             </div>
             <div class="profile-card">
-                <a href="#">
+                <a href="icoca.html">
                     <div class="img">
                         <img src="images/icoca.jpg">
                         <h1>
