--- a/how_to.html
+++ b/how_to.html
@@ -72,7 +72,7 @@
                 </a>
             </div>
             <div class="profile-card">
-                <a href="#">
+                <a href="garbage.html">
                     <div class="img">
                         <img src="images/garbage.jpg">
                         <h1>
