--- a/how_to.html
+++ b/how_to.html
@@ -82,11 +82,11 @@
                 </a>
             </div>
             <div class="profile-card">
-                <a href="#">
+                <a href="daily_needed.html">
                     <div class="img">
                         <img src="images/Foodlogo.png">
                         <h1>
-                            <center> Daily Needed Goods</center>
+                            <center> Daily Needed Foods</center>
                         </h1>
                     </div>
                 </a>
