updated about us

--- a/about-us.html
+++ b/about-us.html
@@ -42,6 +42,13 @@
         </h1>
         <div class="team">
             <p><b>GROUP 6 | Kyoto Guider - “Website for Living Guide in Kyoto for International Students”</b> </p> <br>
+            <p>Our goal is to create a website that will provide a comprehensive range of resources and services to help
+                international students with the transition to life in a new country. The website will include
+                information about how to manage home garbage, how to use IC Card, how to buy daily needed foods, how to
+                use train, how to use city bus and so on. <br><br>
+
+                Although, we have the little knowledge and expertise to make this project a success, We are passionate about creating a
+                comprehensive website to help international students and we are committed to making it a reality.</p> <br><br>
             <div class="role">
                 <div class="members">
                     <h2>Team:</h2> <br>
@@ -83,152 +90,152 @@
                 </div>
             </div>
         </div>
-            <div class="main">
-                <div class="profile-card">
-                    <div class="img">
-                        <img src="images/namaraj.jpg">
-                        <h1>
-                            <center> Paudel Namaraj <i>(M22W0407)</i></center>
-                        </h1>
-                    </div>
-                    <div class="caption">
-                        <p>Leader</p>
-                        <div class="social-links">
-                            <a href="#"><i class="fab fa-facebook"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                        </div>
-                    </div>
+        <div class="main">
+            <div class="profile-card">
+                <div class="img">
+                    <img src="images/namaraj.jpg">
+                    <h1>
+                        <center> Paudel Namaraj <i>(M22W0407)</i></center>
+                    </h1>
                 </div>
-                <div class="profile-card">
-                    <div class="img">
-                        <img src="images/prabin.jpg">
-                        <h1>
-                            <center> Subedi Prabin <i>(M22W7191)</i></center>
-                        </h1>
-                    </div>
-                    <div class="caption">
-                        <p>Sub-Leader </p>
-                        <div class="social-links">
-                            <a href="#"><i class="fab fa-facebook"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="profile-card">
-                    <div class="img">
-                        <img src="images/Asis.jpeg">
-                        <h1>
-                            <center> Thapa Ashish <i>(M22W7214)</i></center>
-                        </h1>
-                    </div>
-                    <div class="caption">
-                        <p>Sub-Leader</p>
-                        <div class="social-links">
-                            <a href="#"><i class="fab fa-facebook"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="profile-card">
-                    <div class="img">
-                        <img src="images/person_logo.jpg">
-                        <h1>
-                            <center> Bist Arayan <i>(M22W0123)</i></center>
-                        </h1>
-                    </div>
-                    <div class="caption">
-                        <p>Member</p>
-                        <div class="social-links">
-                            <a href="#"><i class="fab fa-facebook"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="profile-card">
-                    <div class="img">
-                        <img src="images/deepak.jpg">
-                        <h1>
-                            <center> Belbase Deepak <i>(M22W0195)</i></center>
-                        </h1>
-                    </div>
-                    <div class="caption">
-                        <p>Member</p>
-                        <div class="social-links">
-                            <a href="#"><i class="fab fa-facebook"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="profile-card">
-                    <div class="img">
-                        <img src="images/pratik.JPG">
-                        <h1>
-                            <center> Bhujel Pratik <i>(M22W7143)</i></center>
-                        </h1>
-                    </div>
-                    <div class="caption">
-                        <p>Member</p>
-                        <div class="social-links">
-                            <a href="#"><i class="fab fa-facebook"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="profile-card">
-                    <div class="img">
-                        <img src="images/pema.jpg">
-                        <h1>
-                            <center> Thapa Pema <i>(M22W7212)</i></center>
-                        </h1>
-                    </div>
-                    <div class="caption">
-                        <p>Member</p>
-                        <div class="social-links">
-                            <a href="#"><i class="fab fa-facebook"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="profile-card">
-                    <div class="img">
-                        <img src="images/Samita.jpg">
-                        <h1>
-                            <center> Limbu Samita <i>(M22W0407)</i></center>
-                        </h1>
-                    </div>
-                    <div class="caption">
-                        <p>Member</p>
-                        <div class="social-links">
-                            <a href="#"><i class="fab fa-facebook"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="profile-card">
-                    <div class="img">
-                        <img src="images/Rama.jpg">
-                        <h1>
-                            <center> Tamang Rama <i>(M22W7255)</i></center>
-                        </h1>
-                    </div>
-                    <div class="caption">
-                        <p>Member</p>
-                        <div class="social-links">
-                            <a href="#"><i class="fab fa-facebook"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                        </div>
+                <div class="caption">
+                    <p>Leader</p>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
             </div>
+            <div class="profile-card">
+                <div class="img">
+                    <img src="images/prabin.jpg">
+                    <h1>
+                        <center> Subedi Prabin <i>(M22W7191)</i></center>
+                    </h1>
+                </div>
+                <div class="caption">
+                    <p>Sub-Leader </p>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="profile-card">
+                <div class="img">
+                    <img src="images/Asis.jpeg">
+                    <h1>
+                        <center> Thapa Ashish <i>(M22W7214)</i></center>
+                    </h1>
+                </div>
+                <div class="caption">
+                    <p>Sub-Leader</p>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="profile-card">
+                <div class="img">
+                    <img src="images/arayan.jpg">
+                    <h1>
+                        <center> Bist Arayan <i>(M22W0123)</i></center>
+                    </h1>
+                </div>
+                <div class="caption">
+                    <p>Member</p>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="profile-card">
+                <div class="img">
+                    <img src="images/deepak.jpg">
+                    <h1>
+                        <center> Belbase Deepak <i>(M22W0195)</i></center>
+                    </h1>
+                </div>
+                <div class="caption">
+                    <p>Member</p>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="profile-card">
+                <div class="img">
+                    <img src="images/pratik.JPG">
+                    <h1>
+                        <center> Bhujel Pratik <i>(M22W7143)</i></center>
+                    </h1>
+                </div>
+                <div class="caption">
+                    <p>Member</p>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="profile-card">
+                <div class="img">
+                    <img src="images/pema.jpg">
+                    <h1>
+                        <center> Thapa Pema <i>(M22W7212)</i></center>
+                    </h1>
+                </div>
+                <div class="caption">
+                    <p>Member</p>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="profile-card">
+                <div class="img">
+                    <img src="images/Samita.jpg">
+                    <h1>
+                        <center> Limbu Samita <i>(M22W0407)</i></center>
+                    </h1>
+                </div>
+                <div class="caption">
+                    <p>Member</p>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="profile-card">
+                <div class="img">
+                    <img src="images/Rama.jpg">
+                    <h1>
+                        <center> Tamang Rama <i>(M22W7255)</i></center>
+                    </h1>
+                </div>
+                <div class="caption">
+                    <p>Member</p>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </section>
     <!-- about us section ends -->
