--- a/footer.html
+++ b/footer.html
@@ -2,9 +2,8 @@
     <div class="container">
         <div class="card">
             <h3>About Us</h3>
-            <p>We offer the best limits on our top-rated visit bundles to clients who pick our viable
-                administrations
-                over and over.</p>
+            <p>Our goal is to create a website that will provide a comprehensive range of resources and services to help
+                international students with the transition to life in a new country. </p>
         </div>
         <div class="card">
             <h3> Official Sites</h3>
