--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- home section starts  -->
     <div class="home" id="home">
         <div class="content">
-            <h3>Travel Kyoto in a Minute - Aerial Drone Video</h3>
+            <h3>Video Source: https://www.youtube.com/watch?v=AMymdib9-8A</h3>
         </div>
 
         <div class="video-container">
