updated home page, and train

--- a/how_to.html
+++ b/how_to.html
@@ -42,7 +42,7 @@
         </h1>
         <div class="main">
             <div class="profile-card">
-                <a href="/index.html#railway">
+                <a href="/train.html">
                     <div class="img">
                         <img src="images/train.png">
                         <h1>
