--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
         <div class="container">
             <div class="card">
-                <a href="karasuma.html">
+                <a href="train.html">
                     <img src="images/karasuma.jpg" alt="">
                     <div class="content">
                         <h3>Karasuma Line </h3>
@@ -148,7 +148,7 @@
             </a>
 
             <div class="card">
-                <a href="Tozai.html">
+                <a href="train.html">
                     <img src="images/tozai.jpg" alt="">
                     <div class="content">
                         <h3> Tōzai Line </h3>
@@ -157,7 +157,7 @@
             </div>
 
             <div class="card">
-                <a href="Keifuku Line (Randen).html">
+                <a href="train.html">
                     <img src="images/keifuku.jpg" alt="">
                     <div class="content">
                         <h3>Keifuku Line (Randen) </h3>
@@ -166,7 +166,7 @@
             </div>
 
             <div class="card">
-                <a href="keihan.html">
+                <a href="train.html">
                     <img src="images/keihan.jpg" alt="">
                     <div class="content">
                         <h3> Keihan Line </h3>
@@ -175,7 +175,7 @@
             </div>
 
             <div class="card">
-                <a href="Kintetsu.html">
+                <a href="train.html">
                     <img src="images/kintestu.jpg" alt="">
                     <div class="content">
                         <h3> Kintestu Line </h3>
@@ -184,7 +184,7 @@
             </div>
 
             <div class="card">
-                <a href="The Sagano Scenic Railway.html">
+                <a href="train.html">
                     <img src="images/sagano.jpg" alt="">
                     <div class="content">
                         <h3> Sagano Scenic Line </h3>
@@ -193,7 +193,7 @@
             </div>
 
             <div class="card">
-                <a href="hyanku.html">
+                <a href="train.html">
                     <img src="images/hyanku.jpg" alt="">
                     <div class="content">
                         <h3> Hankyū Line </h3>
@@ -202,7 +202,7 @@
             </div>
 
             <div class="card">
-                <a href="Eizan.html">
+                <a href="train.html">
                     <img src="images/eizan.jpg" alt="">
                     <div class="content">
                         <h3> Eizan Line </h3>
@@ -211,7 +211,7 @@
             </div>
 
             <div class="card">
-                <a href="JR.html">
+                <a href="train.html">
                     <img src="images/jr.jpg" alt="">
                     <div class="content">
                         <h3> JR Line </h3>
