--- a/train.html
+++ b/train.html
@@ -14,7 +14,7 @@
 
     <!-- custom css file link  -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/karasuma.css">
+    <link rel="stylesheet" href="css/train.css">
 
 </head>
 
@@ -37,16 +37,32 @@
 
     <section class="overview">
         <div class="container">
-            <h4><i class="fa fa-train" aria-hidden="true"></i> The Karasuma Line</h4>
-            <img src="images/karasuma.jpg" alt="">
-
-            <p>The Karasuma Line is one of two subway lines operated by Kyoto Municipal Subway. The line runs north to
-                south between Kokusaikaikan Station and Takeda Station. It is called the Karasuma Line because for much
-                of the way it runs beneath Karasuma Street. At Karasuma Oike Station it connects with the other subway
-                line, the Tozai Line, which runs east to west.
+            <h4><i class="fa fa-train" aria-hidden="true"></i> Overview</h4>
+            <iframe src="/images/kyoto_train_map.pdf" width="100%" height="1000px"> </iframe>
+            <caption>Source: https://www.discoverkyoto.com/visitors-guide/trains/</caption>
+           
+            <p>Kyoto City has an efficient train network that helps both visitors and locals to get around easily and
+                inexpensively. It can be overwhelming to use the system for the first time, but there are some useful
+                tips about the train lines that can make it simpler to use.
                 <br><br>
-                The trains operate from approximately 5:30 to 23:50. The minimum fare is
-                ¥220 for adults and ¥110 for children.
+                Kyoto Station is the main hub for transportation around the city, with the Karasuma subway line running
+                from north to south and the Kintetsu line connecting to the south of Kyoto, Nara and further. The JR
+                lines offer a variety of options; the Sanin line will take you west to Arashiyama, the Tōkaidō line to
+                Osaka in the southwest or eastern Kyoto and Shiga Prefecture, and the Nara line south to Uji or Nara
+                Prefecture. Visitors arriving in Kyoto usually come by shinkansen bullet train on the Tōkaidō Line.
+                <br><br>
+                In addition to the train lines that go through Kyoto Station, it is also possible to use the Tōzai line,
+                which runs east to west, and the Keihan line, which goes north to south along the east side of the
+                Kamogawa River. This line connects northern Kyoto to Osaka, and also has an extension, the Keihan Uji
+                line, to Uji City.
+                <br><br>
+                Getting around in the suburbs can be done via short-distance public transportation, such as the Keifuku
+                (Randen) rail line which connects Arashiyama to the city centre, and the Eizan train route which links
+                downtown to the northern towns of Kibune and Kurama.
+                <br><br>
+                Examine the map above and become acquainted with the main routes. To get more details regarding
+                connections, duration of the journey, and attractions that can be reached from each station, please
+                check the webpages for particular train lines.
                 <br><br>
             </p>
         </div>
@@ -60,6 +76,56 @@
             <div class="map">
                 <img src="/images/karasuma-station.jpg" alt="">
             </div>
+
+            <div class="heading">
+                <center> Tozai Line Station </center>
+            </div>
+            <div class="map">
+                <img src="/images/tozai_station.jpg" alt="">
+            </div>
+
+            <div class="heading">
+                <center> Keifuku Line (Randen) </center>
+            </div>
+            <div class="map">
+                <img src="/images/keifuku_routemap.jpg" alt="">
+            </div>
+
+            <div class="heading">
+                <center> Keihan Line </center>
+            </div>
+            <div class="map">
+                <img src="/images/keihan_routemap.jpg" alt="">
+            </div>
+
+            <div class="heading">
+                <center> Kintetsu Line </center>
+            </div>
+            <div class="map">
+                <img src="/images/kintetsu_routemap.jpg" alt="">
+            </div>
+
+            <div class="heading">
+                <center> Sagano Scenic Line </center>
+            </div>
+            <div class="map">
+                <img src="/images/sagano_routemap.jpg" alt="">
+            </div>
+
+            <div class="heading">
+                <center> Hankyū Line </center>
+            </div>
+            <div class="map">
+                <img src="/images/hankyu_routemap.jpg" alt="">
+            </div>
+
+            <div class="heading">
+                <center> Eizan Line </center>
+            </div>
+            <div class="map">
+                <img src="/images/eizan_routemap.jpg" alt="">
+            </div>
+
             <!-- How to buy ticket section start -->
             <div class="heading">
                 <center> HOW TO BUY A TICKET </center>
