updated visiting place

--- a/Arashiyama Bamboo Forest.html
+++ b/Arashiyama Bamboo Forest.html
@@ -58,8 +58,8 @@
 
             </p>
 
-            <p>Address: <i>1 Chome-294 Kiyomizu, Higashiyama Ward, Kyoto, 605-0862</i></p>
-            <p>Official Site: <a href="https://www.kiyomizudera.or.jp/en/">www.kiyomizudera.or.jp/en/</a></p>
+            <p>Address: <i>〒605-0028 Kyoto, Higashiyama Ward, Bunkicho, 61 シティハウスJOY三条</i></p>
+            <p>Official Site: none</p>
 
             <h4>Gallery</h4>
             <div class="gallery">
