--- a/Fushimi Inari-taisha.html
+++ b/Fushimi Inari-taisha.html
@@ -57,8 +57,8 @@
                 shrine is the central location for some 40,000 Inari shrines throughout the entirety of Japan.
             </p>
 
-            <p>Address: <i>1 Chome-294 Kiyomizu, Higashiyama Ward, Kyoto, 605-0862</i></p>
-            <p>Official Site: <a href="https://www.kiyomizudera.or.jp/en/">www.kiyomizudera.or.jp/en/</a></p>
+            <p>Address: <i>68 Fukakusa Yabunouchicho, Fushimi Ward, Kyoto, 612-0882</i></p>
+            <p>Official Site: <a href="http://inari.jp/">www.inari.jp/</a></p>
 
             <h4>Gallery</h4>
             <div class="gallery">
