--- a/Iwatayama Monkey Park.html
+++ b/Iwatayama Monkey Park.html
@@ -64,8 +64,8 @@
                 Mountaintop is open from 9 am–4:30 pm
             </p>
 
-            <p>Address: <i>1 Chome-294 Kiyomizu, Higashiyama Ward, Kyoto, 605-0862</i></p>
-            <p>Official Site: <a href="https://www.kiyomizudera.or.jp/en/">www.kiyomizudera.or.jp/en/</a></p>
+            <p>Address: <i>〒616-0004 Kyoto, Nishikyo Ward, Arashiyama Nakaoshitacho, ６１</i></p>
+            <p>Official Site: <a href="http://www.monkeypark.jp/">www.monkeypark.jp</a></p>
 
             <h4>Gallery</h4>
             <div class="gallery">
