--- a/Kyoto Imperial Palace.html
+++ b/Kyoto Imperial Palace.html
@@ -40,9 +40,9 @@
             <h4>Kyoto Imperial Palace</h4>
             <img src="images/imperial8.jpg" alt="Kiyomizu-dera Temple">
 
-            <p>The Kyoto Imperial Palace (京都御所, Kyōto Gosho) used to be the residence of Japan's Imperial Family until
+            <p>The Kyoto Imperial Palace used to be the residence of Japan's Imperial Family until
                 1868, when the emperor and capital were moved from Kyoto to Tokyo. It is located in the spacious Kyoto
-                Imperial Park (京都御苑, Kyōto Gyoen), an attractive park in the center of the city that also encompasses
+                Imperial Park, an attractive park in the center of the city that also encompasses
                 the Sento Imperial Palace, which served retired emperors, and a few other attractions..
                 <br><br>
 
@@ -54,7 +54,7 @@
                 Besides the Imperial Palace and the Sento Palace grounds, a few other historic sites are located within
                 Kyoto Imperial Park, including the Kaninnomiya Mansion, a former residence of court nobles that is open
                 to the public in the park's southwestern corner. Not far away stands a small branch shrine of Miyajima's
-                famous Itsukushima Shrine on a small island of a pond.
+                famous Itsukushima Shrine on a small island of a pond. <br><br>
 
                 The 1300 meter long and 700 meter wide park also serves as recreational space for both tourists and
                 residents, featuring attractive, broad gravel paths, lawns and tree groves. A pretty group of weeping
@@ -62,8 +62,8 @@
                 to three weeks from late March to mid April.
             </p>
 
-            <p>Address: <i>1 Chome-294 Kiyomizu, Higashiyama Ward, Kyoto, 605-0862</i></p>
-            <p>Official Site: <a href="https://www.kiyomizudera.or.jp/en/">www.kiyomizudera.or.jp/en/</a></p>
+            <p>Address: <i>3 Kyotogyoen, Kamigyo Ward, Kyoto, 602-0881</i></p>
+            <p>Official Site: none</p>
 
             <h4>Gallery</h4>
             <div class="gallery">
