--- a/Ryōan-ji.html
+++ b/Ryōan-ji.html
@@ -55,19 +55,19 @@
 
                 Following the path, at the top is a view of the city, mountains, and river, with a bright blue sky
                 draped over it all on a sunny day. After fawning over the view (Japan really hypes up -- and does not
-                disappoint -- on that “view”), there is a chance to feed the monkeys.
+                disappoint -- on that “view”), there is a chance to feed the monkeys. <br>
 
                 They're eager to gobble up apple chunks tourists can buy and offer through the safety of an enclosed
                 area. They grab the food right out of your hand, as they hang on the outside of the caged-in window
-                area.
+                area. <br>
 
                 A visit will take about 1-2 hours, and visitors can enter from 9 am–4:30 pm. /5 pm. from 15th March to
                 30 September. During the Autumn and Winter periods, the park is open from 9 am–4 pm, while the
                 Mountaintop is open from 9 am–4:30 pm
             </p>
 
-            <p>Address: <i>1 Chome-294 Kiyomizu, Higashiyama Ward, Kyoto, 605-0862</i></p>
-            <p>Official Site: <a href="https://www.kiyomizudera.or.jp/en/">www.kiyomizudera.or.jp/en/</a></p>
+            <p>Address: <i>13 Ryoanji Goryonoshitacho, Ukyo Ward, Kyoto, 616-8001</i></p>
+            <p>Official Site: <a href="http://www.ryoanji.jp/">www.ryoanji.jp</a></p>
 
             <h4>Gallery</h4>
             <div class="gallery">
