--- a/kifune.html
+++ b/kifune.html
@@ -37,7 +37,7 @@
 
     <section class="details">
         <div class="container">
-            <h4>kifune shrine</h4>
+            <h4>Kifune Shrine</h4>
             <img src="images/kifune5.jpg" alt="Kiyomizu-dera Temple">
 
             <p>Kibune is only around thirty minutes from Kyoto City, but it feels like worlds away. If you want to
@@ -73,8 +73,8 @@
                 recording of the fortune!
             </p>
 
-            <p>Address: <i>1 Chome-294 Kiyomizu, Higashiyama Ward, Kyoto, 605-0862</i></p>
-            <p>Official Site: <a href="https://www.kiyomizudera.or.jp/en/">www.kiyomizudera.or.jp/en/</a></p>
+            <p>Address: <i>180 Kuramakibunecho, Sakyo Ward, Kyoto, 601-1112</i></p>
+            <p>Official Site: <a href="https://kifunejinja.jp/">www.kifunejinja.jp</a></p>
 
             <h4>Gallery</h4>
             <div class="gallery">
