--- a/kinkakuji.html
+++ b/kinkakuji.html
@@ -38,7 +38,7 @@
     <section class="details">
         <div class="container">
             <h4>Kinkakuji (Golden Pavilion) </h4>
-            <img src="images/kinkakuji5jpg" alt="Kiyomizu-dera Temple">
+            <img src="images/kinkakuji5.jpg" alt="Kiyomizu-dera Temple">
 
             <p>Kinkaku-ji is located in Kinkakuji-cho, Kita-ku, in the northwester corner of Kyoto. It is a beautiful
                 area, with the mountains Kinugasayama to the west and Hidari Daimonjiyama behind it. The range of
@@ -65,8 +65,8 @@
                 trade relations with Japan’s continental neighbor.
             </p>
 
-            <p>Address: <i>1 Chome-294 Kiyomizu, Higashiyama Ward, Kyoto, 605-0862</i></p>
-            <p>Official Site: <a href="https://www.kiyomizudera.or.jp/en/">www.kiyomizudera.or.jp/en/</a></p>
+            <p>Address: <i>1 Kinkakujicho, Kita Ward, Kyoto, 603-8361</i></p>
+            <p>Official Site: none</p>
 
             <h4>Gallery</h4>
             <div class="gallery">
