--- a/nijo castle.html
+++ b/nijo castle.html
@@ -40,13 +40,13 @@
             <h4>Nijō Castle</h4>
             <img src="images/nijo1.jpg" alt="Kiyomizu-dera Temple">
 
-            <p>Nijō Castle (二条城, Nijō-jō) is a flatland castle in Kyoto, Japan. The castle consists of two concentric
+            <p>Nijō Castle is a flatland castle in Kyoto, Japan. The castle consists of two concentric
                 rings (Kuruwa) of fortifications, the Ninomaru Palace, the ruins of the Honmaru Palace, various support
                 buildings and several gardens. The surface area of the castle is 275,000 square metres (27.5 ha; 68
                 acres), of which 8,000 square metres (86,000 sq ft) is occupied by buildings.
                 <br><br>
 
-                Nijo Castle (二条城, Nijōjō) was built in 1603 as the Kyoto residence of Tokugawa Ieyasu, the first shogun
+                Nijo Castle was built in 1603 as the Kyoto residence of Tokugawa Ieyasu, the first shogun
                 of the Edo Period (1603-1867). His grandson Iemitsu completed the castle's palace buildings 23 years
                 later and further expanded the castle by adding a five story castle keep.<br><br>
 
@@ -60,8 +60,8 @@
                 are surrounded by stone walls and moats.
             </p>
 
-            <p>Address: <i>1 Chome-294 Kiyomizu, Higashiyama Ward, Kyoto, 605-0862</i></p>
-            <p>Official Site: <a href="https://www.kiyomizudera.or.jp/en/">www.kiyomizudera.or.jp/en/</a></p>
+            <p>Address: <i>541 Nijojocho, Nakagyo Ward, Kyoto, 604-8301</i></p>
+            <p>Official Site: <a href="http://nijo-jocastle.city.kyoto.lg.jp/">www.nijo-jocastle.city.kyoto.lg.jp/</a></p>
 
             <h4>Gallery</h4>
             <div class="gallery">
