--- a/icoca.html
+++ b/icoca.html
@@ -52,7 +52,7 @@
                             simultaneously.</p>
                     </div>
                     <div>
-                        <img src="images/ic.png" alt="">
+                        <img src="images/ic.PNG" alt="">
                     </div>
                 </div>
                 <div class="card">
