--- a/header.html
+++ b/header.html
@@ -4,6 +4,7 @@
     <a href="index.html"><b>Home</b></a>
     <a href="index.html#top"><b>Visiting Places</b></a>
     <a href="how_to.html"><b>How To</b></a>
+    <a href="videos.html"><b>Videos</b></a>
     <a href="contact.html"><b>Contact Us</b></a>
     <a href="about-us.html"><b>About Us</b></a>
 </nav>
