updated train file

--- a/train.html
+++ b/train.html
@@ -38,7 +38,7 @@
     <section class="overview">
         <div class="container">
             <h4><i class="fa fa-train" aria-hidden="true"></i> Overview</h4>
-            <iframe src="/images/kyoto_train_map.pdf" width="100%" height="1000px"> </iframe>
+            <iframe src="images/kyoto_train_map.pdf" width="100%" height="1000px"> </iframe>
             <caption>Source: https://www.discoverkyoto.com/visitors-guide/trains/</caption>
            
             <p>Kyoto City has an efficient train network that helps both visitors and locals to get around easily and
@@ -74,56 +74,56 @@
                 <center> Karasuma Line Stations </center>
             </div>
             <div class="map">
-                <img src="/images/karasuma-station.jpg" alt="">
+                <img src="images/karasuma-station.jpg" alt="">
             </div>
 
             <div class="heading">
                 <center> Tozai Line Station </center>
             </div>
             <div class="map">
-                <img src="/images/tozai_station.jpg" alt="">
+                <img src="images/tozai_station.jpg" alt="">
             </div>
 
             <div class="heading">
                 <center> Keifuku Line (Randen) </center>
             </div>
             <div class="map">
-                <img src="/images/keifuku_routemap.jpg" alt="">
+                <img src="images/keifuku_routemap.jpg" alt="">
             </div>
 
             <div class="heading">
                 <center> Keihan Line </center>
             </div>
             <div class="map">
-                <img src="/images/keihan_routemap.jpg" alt="">
+                <img src="images/keihan_routemap.jpg" alt="">
             </div>
 
             <div class="heading">
                 <center> Kintetsu Line </center>
             </div>
             <div class="map">
-                <img src="/images/kintetsu_routemap.jpg" alt="">
+                <img src="images/kintetsu_routemap.jpg" alt="">
             </div>
 
             <div class="heading">
                 <center> Sagano Scenic Line </center>
             </div>
             <div class="map">
-                <img src="/images/sagano_routemap.jpg" alt="">
+                <img src="images/sagano_routemap.jpg" alt="">
             </div>
 
             <div class="heading">
                 <center> Hankyū Line </center>
             </div>
             <div class="map">
-                <img src="/images/hankyu_routemap.jpg" alt="">
+                <img src="images/hankyu_routemap.jpg" alt="">
             </div>
 
             <div class="heading">
                 <center> Eizan Line </center>
             </div>
             <div class="map">
-                <img src="/images/eizan_routemap.jpg" alt="">
+                <img src="images/eizan_routemap.jpg" alt="">
             </div>
 
             <!-- How to buy ticket section start -->
