--- a/header.html
+++ b/header.html
@@ -7,4 +7,5 @@
     <a href="videos.html"><b>Videos</b></a>
     <a href="contact.html"><b>Contact Us</b></a>
     <a href="about-us.html"><b>About Us</b></a>
+    <a href="references.html"><b>References</b></a>
 </nav>
