added official sites in footer

--- a/footer.html
+++ b/footer.html
@@ -8,6 +8,15 @@
         <div class="card">
             <h3> Official Sites</h3>
             <a href="https://www.kiyomizudera.or.jp/en/">Kiyomizu-dera Temple</a>
+            <a href="https://kifunejinja.jp/">Kifune Shrine</a>
+            <a href="http://inari.jp/">Fushimi Inari Taisha</a>
+            <a href="https://nijo-jocastle.city.kyoto.lg.jp/">Nijō Castle</a>
+            <a href="http://www.monkeypark.jp/">Monkey Park</a>
+            <a href="http://www.ryoanji.jp/top.html">Ryōan-ji</a>
+            <a href="https://www.keifuku.co.jp/"> Keifuku Electric Railway </a>
+            <a href="https://eizandensha.co.jp/en/">Eizan Electric Railway</a>
+            <a href=" https://www.hankyu.co.jp/en/">Hankyu Railway</a>
+            <a href="https://www.westjr.co.jp/global/en/">JR West</a>
         </div>
         <div class="card">
             <h3>Useful Links</h3>
